# timeflow

./: .cursorignore  .env.example  CHANGELOG.md  Makefile  README.md  project_structure.txt  pyproject.toml
docs/: README.md
docs/development/: auto-duration-update.md  bugfix-summary.md  database-path-fix.md  feature-summary.md  implementation-summary.md  project-summary.md  smart-duration-demo.md
docs/setup/: installation.md  setup-instructions.md
docs/user-guide/: interactive-mode.md  quickstart.md  shell-completion.md  usage-examples.md
src/logger/: cli.py  config.py
src/logger/api/: __init__.py  gemini.py
src/logger/db/: models.py  operations.py
src/logger/utils/: __init__.py  clipboard.py
src/logger/web/: __init__.py  app.py
src/logger/web/static/: style.css
src/logger/web/templates/: base.html  index.html  stats.html
